--- a/src/app/views/warehouse/subdirection/components/subdirection-create/subdirection-create.component.html
+++ b/src/app/views/warehouse/subdirection/components/subdirection-create/subdirection-create.component.html
@@ -1,45 +1,47 @@
-<h2>GG IZI</h2>
-<!-- <div class="animated fadeIn">
+<div class="animated fadeIn">
   <div class="row">
     <div class="col-sm-12 col-md-6 offset-md-3">
       <div class="card">
-        <form #formProject="ngForm" (ngSubmit)="onSubmitProject(formProject.value)">
+        <form #formSubdirection="ngForm" (ngSubmit)="onSubmitSubdirection(formSubdirection.value)">
               
           <div class="card-header">
-            <strong>Proyecto</strong>
-            <small>Formulario</small>
+            <strong>Departamento</strong>
+            <small> - Formulario</small>
           </div>
           <div class="card-body">
+
             <div class="row">
               <div class="col-sm-12">
                 <div class="form-group">
-                  <label for="description">Número de proyecto</label>
-                  <input ngModel name="project_number" #projectNumberInput #projectNumber="ngModel" type="number" class="form-control" placeholder="Ingrese un número de proyecto..." required min="00">
-                  <ul *ngIf="projectNumber.invalid && (projectNumber.dirty || projectNumber.touched)" class="alert alert-danger" style="margin-top: .5em">
-                      <li *ngIf="projectNumber.errors.required"> Debes ingresar un número de <strong>proyecto</strong> </li>
+                  <label for="name">Nombre del departamento</label>
+                  <input ngModel name="name" #nameInput #name="ngModel" type="text" class="form-control" placeholder="Ingrese un nombre para el departamento..." required minlength="2">
+                  <ul *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger" style="margin-top: .5em">
+                      <li *ngIf="name.errors.required"> Debes ingresar un <strong>nombre de departamento</strong> </li>
+                      <li *ngIf="name.errors.minlength"> Debes ingresar una descripción como mínimo de <strong> {{ name.errors.minlength.requiredLength }} </strong> caracteres </li>
                   </ul>
                 </div>
               </div>
             </div>
+
             <div class="row">
               <div class="col-sm-12">
                 <div class="form-group">
-                  <label for="description">Descripción</label>
-                  <input ngModel name="description" #descriptionInput #description="ngModel" type="text" class="form-control" placeholder="Ingrese una descripción..." required minlength="2">
-                  <ul *ngIf="description.invalid && (description.dirty || description.touched)" class="alert alert-danger" style="margin-top: .5em">
-                      <li *ngIf="description.errors.required"> Debes ingresar una <strong>descripción</strong> </li>
-                      <li *ngIf="description.errors.minlength"> Debes ingresar una descripción como mínimo de <strong> {{ description.errors.minlength.requiredLength }} </strong> caracteres </li>
+                  <label for="boss_ame">Nombre del jefe</label>
+                  <input ngModel name="boss_name" #boss_nameInput #boss_name="ngModel" type="text" class="form-control" placeholder="Ingrese el nombre del jefe de departamento..." required>
+                  <ul *ngIf="boss_name.invalid && (boss_name.dirty || boss_name.touched)" class="alert alert-danger" style="margin-top: .5em">
+                      <li *ngIf="boss_name.errors.required"> Debes ingresar nombre de <strong>jefe</strong> </li>
                   </ul>
                 </div>
               </div>
             </div>
+
           </div>
           <div class="card-footer text-right">
-            <button [disabled]="formProject.invalid" type="submit" class="btn btn-outline-primary"><i class="fa fa-check"></i> Registrar</button>
+            <button [disabled]="formSubdirection.invalid" type="submit" class="btn btn-outline-primary"><i class="fa fa-check"></i> Registrar</button>
           </div>
 
         </form>
       </div>
     </div>
   </div>
-</div> -->
+</div>
