--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -12,3 +12,7 @@
 .s-content-footer-right {
     float: right;
 }
+
+@import '~@swimlane/ngx-datatable/release/index.css';
+@import '~@swimlane/ngx-datatable/release/themes/material.css';
+@import '~@swimlane/ngx-datatable/release/assets/icons.css';
