--- a/src/app/views/warehouse/subdirection/components/subdirections/subdirections.component.html
+++ b/src/app/views/warehouse/subdirection/components/subdirections/subdirections.component.html
@@ -1,17 +1,68 @@
-<div>
-  <ngx-datatable
-  class="material expandable"
-  [rows]="subdirections"
-  [columns]="columns"
-  [loadingIndicator]="loadingIndicator"
-  [columnMode]="'force'"
-  [headerHeight]="40"
-  [footerHeight]="40"
-  [limit]="40"
-  [rowHeight]="'auto'"
-  [reorderable]="reorderable"
-  [scrollbarH]="true"
-  [loadingIndicator]="true"
-  >
+<div class="container">
+  <h5>
+    <small>
+      <a href="javascript:void(0)" (click)="table.rowDetail.expandAllRows()">Expandir todas las filas</a> | 
+      <a href="javascript:void(0)" (click)="table.rowDetail.collapseAllRows()">Colapsar todas las filas</a>
+    </small>
+  </h5>
+  <ngx-datatable style="height: 550px"
+    #myTable
+    class='material expandable'
+    [columnMode]="'force'"
+    [headerHeight]="50"
+    [footerHeight]="50"
+    [rowHeight]="50"
+    [scrollbarV]="true"
+    [rows]='subdirections'
+    
+    >
+    <!-- Row Detail Template -->
+    <ngx-datatable-row-detail [rowHeight]="100" #myDetailRow (toggle)="onDetailToggle($event)">
+      <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>
+        <div style="padding-left:35px;">
+          <button class="btn btn-secondary">Editar</button>
+          <p>Aquí se puede hacer la consulta individual sin problemas gg</p>
+          <div>{{row | json}}</div>
+        </div>
+      </ng-template>
+    </ngx-datatable-row-detail>
+    <!-- Column Templates -->
+     <ngx-datatable-column
+      [width]="50"
+      [resizeable]="false"
+      [sortable]="false"
+      [draggable]="false"
+      [canAutoResize]="false">
+      <ng-template let-row="row" let-expanded="expanded" ngx-datatable-cell-template>
+        <a
+          href="javascript:void(0)"
+          [class.datatable-icon-right]="!expanded"
+          [class.datatable-icon-down]="expanded"
+          title="Expand/Collapse Row"
+          (click)="toggleExpandRow(row)">
+        </a>
+      </ng-template>
+    </ngx-datatable-column>
+
+    <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
+    <ngx-datatable-column [minWidth]="100" name="ID" prop="id" width="100">
+      <ng-template let-value="value" ngx-datatable-cell-template>
+        <strong>{{value}}</strong>
+      </ng-template>
+    </ngx-datatable-column>
+
+    <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
+    <ngx-datatable-column [minWidth]="250" name="Nombre de departamento" prop="name" width="250">
+      <ng-template let-value="value" ngx-datatable-cell-template>
+        <strong>{{value}}</strong>
+      </ng-template>
+    </ngx-datatable-column>
+    
+    <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
+    <ngx-datatable-column [minWidth]="250" name="Jefe de departamento" prop="boss_name" width="250">
+      <ng-template let-value="value" ngx-datatable-cell-template>
+        <strong>{{value}}</strong>
+      </ng-template>
+    </ngx-datatable-column>
   </ngx-datatable>
 </div>
