Update is working as expected on provider.

--- a/src/app/views/warehouse/provider/components/provider-edit/provider-edit.component.html
+++ b/src/app/views/warehouse/provider/components/provider-edit/provider-edit.component.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn">
+<div class="animated fadeIn" *ngIf="provider">
     <div class="row">
       <div class="col-sm-12 col-md-6 offset-md-3">
         <div class="card">
