--- a/src/app/views/warehouse/project/components/project-create/project-create.component.html
+++ b/src/app/views/warehouse/project/components/project-create/project-create.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-6 offset-md-3">
       <div class="card">
-        <form #formProject="ngForm" (ngSubmit)="onSubmitProject(formProject.value)">
+        <form #formProject="ngForm" (ngSubmit)="onSubmitProject(formProject.value); formProject.reset()">
               
           <div class="card-header">
             <strong>Proyecto</strong>
