--- a/src/app/views/warehouse/provider/components/provider-create/provider-create.component.html
+++ b/src/app/views/warehouse/provider/components/provider-create/provider-create.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-6 offset-md-3">
       <div class="card">
-        <form #formProvider="ngForm" (ngSubmit)="onSubmitProvider(formProvider.value)">
+        <form #formProvider="ngForm" (ngSubmit)="onSubmitProvider(formProvider.value); formProvider.reset()">
               
           <div class="card-header">
             <strong>Proveedores</strong>
