--- a/src/app/views/warehouse/subdirection/components/subdirections/subdirections.component.html
+++ b/src/app/views/warehouse/subdirection/components/subdirections/subdirections.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  
+
   <div class="col-sm-12 col-md-12">
     <div class="card border-primary">
       <div class="card-header">
@@ -7,7 +7,7 @@
       </div>
       <div class="card-body">
         <div class="row">
-    
+
           <div class="col-md-6 form-group">
             <label>Filtrar por:</label>
             <select name="" id="" class="form-control" [(ngModel)]="selectedFilter">
@@ -19,9 +19,9 @@
 
           <div class="col-md-6 form-group">
             <label>Ingrese el texto a filtrar</label>
-            <input type='text' class="form-control" placeholder='Filtrar por columna...' (keyup)='updateFilter($event)'/>
+            <input type='text' class="form-control" placeholder='Filtrar por columna...' (keyup)='updateFilter($event)' />
           </div>
-    
+
         </div>
       </div>
       <div class="card-footer">
@@ -34,62 +34,77 @@
       </div>
     </div>
   </div>
-  
+
   <div class="col-md-12">
-      <ngx-datatable style="height: 550px"
-      #myTable
-      class='material expandable'
-      [columnMode]="'force'"
-      [headerHeight]="50"
-      [footerHeight]="50"
-      [rowHeight]="50"
-      [scrollbarV]="true"
-      [rows]='subdirections'
-      
-      >
+    <ngx-datatable style="height: 550px" #myTable class='material expandable' [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50"
+      [rowHeight]="50" [scrollbarV]="true" [rows]='subdirections'>
       <!-- Row Detail Template -->
-      <ngx-datatable-row-detail [rowHeight]="100" #myDetailRow (toggle)="onDetailToggle($event)">
+      <ngx-datatable-row-detail [rowHeight]="110" #myDetailRow (toggle)="onDetailToggle($event)">
         <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>
-          <div style="padding-left:35px;">
-            <button class="btn btn-secondary">Editar</button>
-            <p>Aquí se puede hacer la consulta individual sin problemas gg</p>
-            <div>{{row | json}}</div>
+
+       <div class="container">
+          <div class="row">
+
+            <div class="col-md-2">
+              <div class="form-group">
+                <label for="id" class="col-md-2 col-form-label">ID:</label>
+                <ul class="list-group">
+                  <li class="list-group-item">{{ row.id }}</li>
+                </ul>
+              </div>
+            </div>
+      
+            
+            <div class="col-md-4">
+              <label for="nombre" class="col-md-2 col-form-label">Nombre de departamento:</label>
+              <ul class="list-group">
+                <li class="list-group-item">{{ row.name }}</li>
+              </ul>
+            </div>
+              
+            <div class="col-md-4">
+              <div class="form-group">
+                <label for="jefe" class="col-md-2 col-form-label">Jefe de departamento:</label>
+                <ul class="list-group">
+                  <li class="list-group-item">{{ row.boss_name }}</li>
+                </ul>
+              </div>
+            </div>
+  
+            <div class="col-md-2">
+              <div class="form-group">
+                <ul class="list-group" style="margin-top: 35px;">
+                  <button class="btn btn-lg btn-link pull-right">Editar</button>
+                </ul>
+              </div>
+            </div>
+  
           </div>
+       </div>
+
         </ng-template>
       </ngx-datatable-row-detail>
       <!-- Column Templates -->
-       <ngx-datatable-column
-        [width]="50"
-        [resizeable]="false"
-        [sortable]="false"
-        [draggable]="false"
-        [canAutoResize]="false">
+      <ngx-datatable-column [width]="50" [resizeable]="false" [sortable]="false" [draggable]="false" [canAutoResize]="false">
         <ng-template let-row="row" let-expanded="expanded" ngx-datatable-cell-template>
-          <a
-            href="javascript:void(0)"
-            [class.datatable-icon-right]="!expanded"
-            [class.datatable-icon-down]="expanded"
-            title="Expand/Collapse Row"
+          <a href="javascript:void(0)" [class.datatable-icon-right]="!expanded" [class.datatable-icon-down]="expanded" title="Expand/Collapse Row"
             (click)="toggleExpandRow(row)">
           </a>
         </ng-template>
       </ngx-datatable-column>
-  
-      <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
+
       <ngx-datatable-column [minWidth]="100" name="ID" prop="id" width="100">
         <ng-template let-value="value" ngx-datatable-cell-template>
           <strong>{{value}}</strong>
         </ng-template>
       </ngx-datatable-column>
-  
-      <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
+
       <ngx-datatable-column [minWidth]="250" name="Nombre de departamento" prop="name" width="250">
         <ng-template let-value="value" ngx-datatable-cell-template>
           <strong>{{value}}</strong>
         </ng-template>
       </ngx-datatable-column>
-      
-      <!-- El [minWidth] es importante para cuando es responsive, chequenle bien gg -->
+
       <ngx-datatable-column [minWidth]="250" name="Jefe de departamento" prop="boss_name" width="250">
         <ng-template let-value="value" ngx-datatable-cell-template>
           <strong>{{value}}</strong>
