Added custom style to get the normal style for readonly controls.

--- a/src/app/views/warehouse/concept/components/concepts/concepts.component.html
+++ b/src/app/views/warehouse/concept/components/concepts/concepts.component.html
@@ -58,7 +58,7 @@
               <div class="col-md-8">
                 <label for="nombre" class="col-md-2 col-form-label">Descripción de la partida:</label>
                 <ul class="list-group">
-                  <textarea readonly class="form-control" style="background-color:white; border-radius: 5px;"> {{ row.description }} </textarea>
+                  <textarea readonly class="form-control" class="read-only-normal-style"> {{ row.description }} </textarea>
                 </ul>
               </div>
     
