--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -13,6 +13,11 @@
     float: right;
 }
 
+.read-only-normal-style {
+  background-color:white;
+  border-radius: 5px;
+}
+
 @import '~@swimlane/ngx-datatable/release/index.css';
 @import '~@swimlane/ngx-datatable/release/themes/material.css';
 @import '~@swimlane/ngx-datatable/release/assets/icons.css';
