signin layout improved

--- a/src/app/containers/session-layout/session-layout.component.html
+++ b/src/app/containers/session-layout/session-layout.component.html
@@ -1,5 +1,10 @@
 <header class="app-header navbar"></header>
-    
-    <router-outlet></router-outlet>
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
 
-<app-session-footer></app-session-footer>
+<!-- <app-session-footer></app-session-footer> -->
+
+<footer class="app-footer" style="margin-right: 0; margin-left: 0;">
+
+</footer>
