Added the route for 'edit program' in general query

--- a/src/app/views/warehouse/program/components/programs/programs.component.html
+++ b/src/app/views/warehouse/program/components/programs/programs.component.html
@@ -74,7 +74,7 @@
             <div class="col-md-2">
               <div class="form-group">
                 <ul class="list-group" style="margin-top: 35px;">
-                  <button class="btn btn-lg btn-link pull-right">Editar</button>
+                  <button class="btn btn-lg btn-link pull-right" [routerLink]="['../edit/', row.id]">Editar</button>
                 </ul>
               </div>
             </div>
