--- a/src/app/views/session/signin/signin.component.html
+++ b/src/app/views/session/signin/signin.component.html
@@ -1,21 +1,25 @@
-<div class="animated fadeIn" style="margin-top: 7em;">
+<div class="animated fadeIn" style="margin-top: 6em;" *ngIf="signinForm">
     <div class="row">
       <div class="col-sm-12 col-md-6 offset-md-3">
         <div class="card">
-          <form #formSignin="ngForm" (ngSubmit)="onSubmitProject(formSignin.value); formSignin.reset()">
+          <form novalidate [formGroup]="signinForm" (ngSubmit)="onSubmitProject(signinForm.value); signinForm.reset()">
                 
             <div class="card-header">
-              <strong>Registro</strong>
-              <small>Formulario</small>
+              <h3 class="text-center">Formulario de registro</h3>
             </div>
             <div class="card-body">
               <div class="row">
                 <div class="col-sm-12">
                   <div class="form-group">
-                    <label for="description">Nombre de usuario</label>
-                    <input ngModel name="username" #username="ngModel" type="text" class="form-control" placeholder="Nombre de usuario..." required>
-                    <ul *ngIf="username.invalid && (username.dirty || username.touched)" class="alert alert-danger" style="margin-top: .5em">
-                        <li *ngIf="username.errors.required"> Debes ingresar un <strong>nombre de usuario</strong> </li>
+                    <label for="">Nombre de usuario</label>
+                    <input formControlName="username" name="username" type="text" class="form-control" placeholder="Nombre de usuario...">
+                    <ul *ngIf="signinForm.controls.username.invalid && (signinForm.controls.username.dirty || signinForm.controls.username.touched)" class="alert alert-danger" style="margin-top: .5em">
+                        <li *ngIf="signinForm.controls.username.errors.required"> 
+                          Debes ingresar un <strong>nombre de usuario</strong>
+                        </li>
+                        <li *ngIf="signinForm.controls.username.errors.minlength">
+                          Su nombre de usuario debe tener mínimo <strong>{{ signinForm.controls.username.errors.minlength.requiredLength }}</strong> caracteres
+                        </li>
                     </ul>
                   </div>
                 </div>
@@ -23,43 +27,68 @@
               <div class="row">
                 <div class="col-sm-12">
                   <div class="form-group">
-                    <label for="description">Email</label>
-                    <input ngModel name="email" #email="ngModel" type="email" class="form-control" placeholder="email@ejemplo.com" required>
-                    <ul *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger" style="margin-top: .5em">
-                        <li *ngIf="email.errors.required"> Debes ingresar un <strong>email</strong> </li>
+                    <label for="">Email</label>
+                    <input formControlName="email" name="email" type="email" class="form-control" placeholder="email@ejemplo.com">
+                    <ul *ngIf="signinForm.controls.email.invalid && (signinForm.controls.email.dirty || signinForm.controls.email.touched)" class="alert alert-danger" style="margin-top: .5em">
+                        <li *ngIf="signinForm.controls.email.errors.required">
+                          Debes ingresar un <strong>email</strong>
+                        </li>
+                        <li *ngIf="signinForm.controls.email.errors.email">
+                          El <strong>email</strong> no es válido
+                        </li>
                     </ul>
                   </div>
                 </div>
-              </div><!--/.row-->
+              </div>
               <div class="row">
                 <div class="col-sm-12">
                   <div class="form-group">
-                    <label for="description">Password</label>
-                    <input ngModel name="password" #password="ngModel" type="password" class="form-control" required>
-                    <ul *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger" style="margin-top: .5em">
-                        <li *ngIf="password.errors.required"> Debes ingresar un <strong>password</strong> </li>
+                    <label for="">Password</label>
+                    <input formControlName="password" name="password" type="password" class="form-control">
+                    <ul *ngIf="signinForm.controls.password.invalid && (signinForm.controls.password.dirty || signinForm.controls.password.touched)" class="alert alert-danger" style="margin-top: .5em">
+                        <li *ngIf="signinForm.controls.password.errors.required">
+                          Debes ingresar un <strong>password</strong>
+                        </li>
                     </ul>
                   </div>
                 </div>
-              </div><!--/.row-->
+              </div>
               <div class="row">
                 <div class="col-sm-12">
                   <div class="form-group">
                     <label for="description">Repetir password</label>
-                    <input ngModel name="password_repeat" #password_repeat="ngModel" type="password" class="form-control" required>
-                    <ul *ngIf="password_repeat.invalid && (password_repeat.dirty || password_repeat.touched)" class="alert alert-danger" style="margin-top: .5em">
-                        <li *ngIf="password_repeat.errors.required"> Debes ingresar un <strong>password</strong> </li>
+                    <input formControlName="passwordConfirm" name="password_confirm" type="password" class="form-control">
+                    <ul *ngIf="signinForm.controls.passwordConfirm.invalid && (signinForm.controls.passwordConfirm.dirty || signinForm.controls.passwordConfirm.touched)" class="alert alert-danger" style="margin-top: .5em">
+                        <li *ngIf="signinForm.controls.passwordConfirm.errors.required">
+                          Debes ingresar un <strong>password</strong>
+                        </li>
+                        <li *ngIf="signinForm.controls.passwordConfirm.errors.matchPassword">
+                          Las contraseñas <strong> no coinciden</strong>
+                        </li>
                     </ul>
                   </div>
                 </div>
-              </div><!--/.row-->
+              </div>
             </div>
             <div class="card-footer text-right">
-              <button [disabled]="formSignin.invalid" type="submit" class="btn btn-outline-primary"><i class="fa fa-check"></i> Registrar</button>
+              <button [disabled]="signinForm.invalid" type="submit" class="btn btn-outline-primary"><i class="fa fa-check"></i> Registrar</button>
             </div>
-  
+
           </form>
         </div>
       </div><!--/.col-->
     </div>
   </div>
+
+  <!-- <div class="row">
+
+      <div class="col-md-12">
+        <p>Form value: {{ signinForm.controls.username.errors | json }}</p>
+      </div>
+      <div class="col-md-12">
+        <p>Form value: {{ signinForm.value | json }}</p>
+      </div>
+      <div class="col-md-12">
+        <p>Form status: {{ signinForm.status | json }}</p>
+      </div>
+    </div> -->
